# avtech-plataform

./: .gitignore  DIRECTORY.md  GUIA.md  INSTRUCTIONS.md
src/backend/: Dockerfile  alembic.ini  app.py  config.py  docker-compose.override.yml  docker-compose.yml  env.example  init.sql  main.py  migrate.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-dev.sh
src/backend/alembic/: env.py
src/backend/alembic/versions/: .gitkeep  001_initial_migration.py  002_add_indexes.py  003_add_triggers.py
src/backend/database/: connection.py  models.py
src/backend/monitoring/: health_check.py  logger.py  metrics.py
src/backend/services/: content_service.py  schedule_service.py  screen_service.py
src/backend/storage/: minio_client.py  storage_service.py
